[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/colorful-palette-swap/code/swappable_palette.gd" type="Script" id=1]
[ext_resource path="res://addons/colorful-palette-swap/panel/theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/colorful-palette-swap/panel/processingpopup.gd" type="Script" id=3]
[ext_resource path="res://addons/colorful-palette-swap/panel/EditorPathInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/colorful-palette-swap/code/invalid_path_popup.gd" type="Script" id=6]

[node name="SwappablePalettePopup" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -224.0
margin_bottom = -401.0
rect_min_size = Vector2( 700, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
resizable = true
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_vertical_enabled = false

[node name="Swap" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 780.0
margin_bottom = 179.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/Swap"]
margin_right = 780.0
margin_bottom = 14.0
text = "Generate Swappable Palettes"

[node name="GenerateSwapPalettes" type="HBoxContainer" parent="ScrollContainer/Swap"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 780.0
margin_bottom = 110.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Paths" type="VBoxContainer" parent="ScrollContainer/Swap/GenerateSwapPalettes"]
margin_right = 699.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BasePalette" parent="ScrollContainer/Swap/GenerateSwapPalettes/Paths" instance=ExtResource( 4 )]
margin_right = 699.0
label = "Base"
path_tooltip = "Path to input base palette."

[node name="Input" parent="ScrollContainer/Swap/GenerateSwapPalettes/Paths" instance=ExtResource( 4 )]
margin_top = 28.0
margin_right = 699.0
margin_bottom = 52.0
label = "Input"
path_tooltip = "Path to input swap palettes."
path_type = 0

[node name="Output" parent="ScrollContainer/Swap/GenerateSwapPalettes/Paths" instance=ExtResource( 4 )]
margin_top = 56.0
margin_right = 699.0
margin_bottom = 80.0
label = "Output"
path_tooltip = "Path to write generated swap palettes that you'll use in the shader."
path_type = 2

[node name="Button" type="Button" parent="ScrollContainer/Swap/GenerateSwapPalettes"]
margin_left = 709.0
margin_top = 11.0
margin_right = 780.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 4
text = "Generate"

[node name="Help" type="Label" parent="ScrollContainer/Swap"]
margin_top = 114.0
margin_right = 780.0
margin_bottom = 179.0
text = "Create palettes for use with palette_swap.shader. Create your art with Base, put your display palettes in Input folder, and Generate to create palettes in Output to set on palette_swap.shader.

You can use Extract Palette to create a Base palette for any art."
autowrap = true

[node name="InvalidPathPopup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
margin_right = 123.0
margin_bottom = 58.0
window_title = "Invalid path"
resizable = true
script = ExtResource( 6 )

[connection signal="process_complete" from="ScrollContainer/Swap/GenerateSwapPalettes" to="." method="_on_process_complete"]
